syntax = "proto3";

option go_package = "./;user";

message UserRegistryRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message UserLoginRequest {
  string username = 1;
  string password = 2;
}

message UserLoginResponse {
  string message = 1;
  string token = 2;
}

service User {
  rpc UserRegistry (UserRegistryRequest) returns (UserLoginResponse) {}
  rpc UserLogin (UserLoginRequest) returns (UserLoginResponse) {}
}